clusters/rpi/apps/cv-pdf/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cv-pdf
  namespace: cv-pdf
  labels:
    app.kubernetes.io/name: cv-pdf
    app.kubernetes.io/part-of: cv-pdf
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: kube-system
      sectionName: web
  hostnames:
    - cv-pdf.kurwidolek.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: cv-pdf-auth
      backendRefs:
        - name: cv-pdf
          port: 8080
